--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
         <title>Title</title>
     </head>
     
-    <body>
-        <p>Paragraph</p>
+    <body> 
+        <h1>Heading</h1>
+        <hr>
+        <!-- This is a comment-->
+        <div id="importance">
+            <p>
+                Stress
+                <ol>
+                    <li>test</li>
+                    <li>test2</li>
+                    <li>test3</li>    
+                </ol>
+             </p>
+        </div>
+       <div id="images">
+        <img src="https://images.unsplash.com/photo-1493101561740-e745892775b2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="Person hugging cat" width="714" height="476">
+       </div>
     </body>
     
 </html>
