--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link href="css/stylesheet.css" rel="stylesheet">
 <!DOCTYPE html>
 
 <html>
@@ -7,22 +8,25 @@
     </head>
     
     <body> 
-        <h1>Heading</h1>
-        <hr>
-        <!-- This is a comment-->
-        <div id="importance">
-            <p>
-                Stress
-                <ol>
-                    <li>test</li>
-                    <li>test2</li>
-                    <li>test3</li>    
-                </ol>
-             </p>
+        <div id="main-container">
+            <div class="head">
+                <h1>Stress</h1>
+                <p></p>
+            </div>
+            <div class="list">
+                <div>
+                    <h1>Ways to help relieve stress!</h1>
+                    <ol>
+                        <li>Meditating</li>
+                        <li>Pets</li>
+                        <li>Laughing</li>    
+                    </ol>
+                </div>
+            </div>
+            <div class="images">
+                <img src="./images/hugcat.jpg" alt="Person hugging cat">
+            </div>
         </div>
-       <div id="images">
-        <img src="https://images.unsplash.com/photo-1493101561740-e745892775b2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="Person hugging cat" width="714" height="476">
-       </div>
     </body>
     
 </html>
