Worked on topbar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     </head>
     
     <body> 
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="action.html">Action</a></li>
+                <li><a href="awareness.html">Awareness</a></li>
+            </ul>
+        </nav>
         <div id="main-container">
             <div class="head">
                 <h1>Stress</h1>
