added main body

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </head>
     
     <body> 
+
+        <!-- Nav Bar -->
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -15,25 +17,33 @@
                 <li><a href="awareness.html">Awareness</a></li>
             </ul>
         </nav>
-        <div id="main-container">
-            <div class="head">
-                <h1>Stress</h1>
-                <p></p>
-            </div>
-            <div class="list">
-                <div>
-                    <h1>Ways to help relieve stress!</h1>
-                    <ol>
-                        <li>Meditating</li>
-                        <li>Pets</li>
-                        <li>Laughing</li>    
-                    </ol>
-                </div>
-            </div>
-            <div class="images">
-                <img src="./images/hugcat.jpg" alt="Person hugging cat">
-            </div>
-        </div>
+
+        <!-- Main Section -->
+        <main>
+            <h1>Stress</h1>
+        </main>
     </body>
     
-</html>
+    </html>
+
+
+<!-- Old Main Body -->
+    <!-- <div id="main-container">
+        <div class="head">
+            <h1>Stress</h1>
+            <p></p>
+        </div>
+    <div class="list">
+        <div>
+            <h1>Ways to help relieve stress!</h1>
+            <ol>
+                <li>Meditating</li>
+                <li>Pets</li>
+                <li>Laughing</li>    
+            </ol>
+        </div>
+    </div>
+    <div class="images">
+        <img src="./images/hugcat.jpg" alt="Person hugging cat">
+    </div>
+    </div> -->
