--- a/index.html
+++ b/index.html
@@ -21,9 +21,30 @@
 
         <!-- Main Section -->
         <main>
-            <h1>Stress</h1>
+            <h1 style="font-size: 28px; font-style: italic;">Stress</h1>
+            <p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lacinia pretium dui vel varius. Nam est justo, faucibus sit amet odio eget, tempor viverra tortor. Donec finibus ante ac consequat congue. Integer elementum mi eros, in dictum erat egestas ac. Integer consectetur at dolor et hendrerit. Nam egestas sapien erat, ut tincidunt metus eleifend ut. Proin sit amet quam suscipit, laoreet lectus sed, mattis quam. Phasellus at quam at lectus tempus feugiat. Proin lorem orci, vulputate eget velit quis, laoreet volutpat nulla. Praesent sed nibh ut turpis suscipit scelerisque sit amet vel elit. Aliquam quis malesuada odio.</p>
+            <h2>2</h2>
+            <p2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lacinia pretium dui vel varius. Nam est justo, faucibus sit amet odio eget, tempor viverra tortor. Donec finibus ante ac consequat congue. Integer elementum mi eros, in dictum erat egestas ac. Integer consectetur at dolor et hendrerit. Nam egestas sapien erat, ut tincidunt metus eleifend ut. Proin sit amet quam suscipit, laoreet lectus sed, mattis quam. Phasellus at quam at lectus tempus feugiat. Proin lorem orci, vulputate eget velit quis, laoreet volutpat nulla. Praesent sed nibh ut turpis suscipit scelerisque sit amet vel elit. Aliquam quis malesuada odio.</p2>
+            <h3>3</h3>
+            <p3 style="font-size: 14px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lacinia pretium dui vel varius. Nam est justo, faucibus sit amet odio eget, tempor viverra tortor. Donec finibus ante ac consequat congue. Integer elementum mi eros, in dictum erat egestas ac. Integer consectetur at dolor et hendrerit. Nam egestas sapien erat, ut tincidunt metus eleifend ut. Proin sit amet quam suscipit, laoreet lectus sed, mattis quam. Phasellus at quam at lectus tempus feugiat. Proin lorem orci, vulputate eget velit quis, laoreet volutpat nulla. Praesent sed nibh ut turpis suscipit scelerisque sit amet vel elit. Aliquam quis malesuada odio.</p3>
+            <h4>4</h4>
+            <p4 style="font-style: italic;">Lorem ipsum dolor sit amet</p4>
+            <h5>5</h5>
+            <h6>6</h6>
+            <div>
+                <h1>Ways to help relieve stress!</h1>
+                <ol>
+                    <li>Meditating</li>
+                    <li>Pets</li>
+                    <li>Laughing</li>    
+                </ol>
+            </div>
+            <img src="./images/hugcat.jpg" alt="Person hugging cat">
+            <div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lacinia pretium dui vel varius. Nam est justo, faucibus sit amet odio eget, tempor viverra tortor. Donec finibus ante ac consequat congue. Integer elementum mi eros, in dictum erat egestas ac. Integer consectetur at dolor et hendrerit. Nam egestas sapien erat, ut tincidunt metus eleifend ut. Proin sit amet quam suscipit, laoreet lectus sed, mattis quam. Phasellus at quam at lectus tempus feugiat. Proin lorem orci, vulputate eget velit quis, laoreet volutpat nulla. Praesent sed nibh ut turpis suscipit scelerisque sit amet vel elit. Aliquam quis malesuada odio.</p>
+            </div>
         </main>
-
+            
         <!-- Footer -->
         <footer>
             <nav>
@@ -38,7 +59,9 @@
             </div>
             <div id="social">
                 <ul>
-                    <li><a href=""></a></li>
+                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
                 </ul>
             </div>
         </footer>
