Changes to body

--- a/action.html
+++ b/action.html
@@ -1,4 +1,4 @@
-<link href="css/stylesheet.css" rel="stylesheet">
+<link href="css/global.css" rel="stylesheet">
 <!DOCTYPE html>
 
 <html>
@@ -11,7 +11,7 @@
         <!-- Nav Bar -->
         <nav class="navbar">
             <ul class="logo">
-                <li><a href="">Climate Change</a></li>
+                <li><a href="">The Inevitability of Climate Change</a></li>
             </ul>
             <ul>
                 <li><a href="index.html">Home</a></li>
