--- a/index.html
+++ b/index.html
@@ -36,32 +36,43 @@
             <div class="about">
 
                 <div>
-                    <img src="./images/meditate.jpg" alt="Person holding a dandelion">
+                    <img src="./images/nature.jpg" alt="Person holding a dandelion">
                 </div>
 
                 <div class="textbox">
                     <h1>What is Climate Change?</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lacinia pretium dui vel varius. Nam est justo, faucibus sit amet odio eget, tempor viverra tortor. Donec finibus ante ac consequat congue. Integer elementum mi eros, in dictum erat egestas ac. Integer consectetur at dolor et hendrerit. Nam egestas sapien erat, ut tincidunt metus eleifend ut. Proin sit amet quam suscipit, laoreet lectus sed, mattis quam. Phasellus at quam at lectus tempus feugiat. Proin lorem orci, vulputate eget velit quis, laoreet volutpat nulla. Praesent sed nibh ut turpis suscipit scelerisque sit amet vel elit. Aliquam quis malesuada odio.
+                    <p>Climate Change is the changing of the world's temperature and weather. This is caused by the burning of fossil fuel. This increases the carbon emission and leads to higher global temperature. Climate Climate has many effects on our world, including sea level rise, droughts, and more...
                     </p>
                 </div>
 
                 <div class="textbox">
                     <h1>The Importance of Climate Change</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lacinia pretium dui vel varius. Nam est justo, faucibus sit amet odio eget, tempor viverra tortor. Donec finibus ante ac consequat congue. Integer elementum mi eros, in dictum erat egestas ac. Integer consectetur at dolor et hendrerit. Nam egestas sapien erat, ut tincidunt metus eleifend ut. Proin sit amet quam suscipit, laoreet lectus sed, mattis quam. Phasellus at quam at lectus tempus feugiat. Proin lorem orci, vulputate eget velit quis, laoreet volutpat nulla. Praesent sed nibh ut turpis suscipit scelerisque sit amet vel elit. Aliquam quis malesuada odio.
+                    <p>Climate Change is extremely important and relevant today. It is changing and destorying the world we live in. In 2021, the C02 emission increased 6%. This results in catastrophic events, such as increased droughts, large scale disasters, and extreme weather.
                     </p>
                 </div>
                 <div>
-                    <img src="./images/laugh.jpg" alt="Person holding a dandelion">
+                    <img src="./images/fire.jpg" alt="Person holding a dandelion">
                 </div>
                 
                 <div>
-                    <img src="./images/hugcat.jpg" alt="Person hugging cat">
+                    <img src="./images/earth.jpg" alt="Person hugging cat">
                 </div>
                 
                 <div class="textbox">
                     <h1>What can you do?</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lacinia pretium dui vel varius. Nam est justo, faucibus sit amet odio eget, tempor viverra tortor. Donec finibus ante ac consequat congue. Integer elementum mi eros, in dictum erat egestas ac. Integer consectetur at dolor et hendrerit. Nam egestas sapien erat, ut tincidunt metus eleifend ut. Proin sit amet quam suscipit, laoreet lectus sed, mattis quam. Phasellus at quam at lectus tempus feugiat. Proin lorem orci, vulputate eget velit quis, laoreet volutpat nulla. Praesent sed nibh ut turpis suscipit scelerisque sit amet vel elit. Aliquam quis malesuada odio.
+                    <p>There are many individual actions that you can take to help Climate Change. These can be small things, such as using more public transportation, and throwing away less food, to bigger actions, such as changing your energy source and speaking up.
                     </p>
+                    <div id="resources">
+                        <div>
+                            <a href="https://sdgs.un.org/goals/goal13" target="_blank"><i class="fa-sharp fa-solid fa-link fa-2xl"></i></a>
+                        </div>
+                        <div>
+                            <a href="https://www.un.org/en/actnow/ten-actions#unplug" target="_blank"><i class="fa-sharp fa-solid fa-link fa-2xl"></i></a>
+                        </div>
+                        <div>
+                            <a href="https://climateclock.world/" target="_blank"><i class="fa-sharp fa-solid fa-link fa-2xl"></i></a>
+                        </div>
+                    </div>
                 </div>
 
             </div>
@@ -101,9 +112,9 @@
             <div></div>
             <div id="social">
                 <ul>
-                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-twitter fa-2xl"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram fa-2xl"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
                 </ul>
             </div>
         </footer>
